--- a/java-project/pom.xml
+++ b/java-project/pom.xml
@@ -9,6 +9,12 @@
   <url>http://maven.apache.org</url>
   <dependencies>
     <dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.0</version>
+		</dependency>
+	
+    <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>3.8.1</version>
